--- a/cornershop-backend-test/users/templates/users/register_user.html
+++ b/cornershop-backend-test/users/templates/users/register_user.html
@@ -1,3 +1,4 @@
+{%extends 'main.html'%}
 {%block content%}
 <form method="POST" action="{% url 'register_user' %}"class="form auth__form">
     {%csrf_token%}
