--- a/cornershop-backend-test/users/templates/users/main.html
+++ b/cornershop-backend-test/users/templates/users/main.html
@@ -1,4 +1,5 @@
 {%extends 'main.html'%}
 {% block content %}
-<h2>Main page</h2>
+<h2>Welcome to Daily Meal 1.0</h2>
+<h3>Please select an option from the menu above</h3>
 {%endblock%}
