--- a/cornershop-backend-test/meals/templates/meals/read.html
+++ b/cornershop-backend-test/meals/templates/meals/read.html
@@ -1,7 +1,7 @@
 {%extends 'main.html'%}
 {%block content%}
     <h1>My Created Meals</h1>
-    <p>Meals can only be edited and deleted before the slack message is sent (currently 11 am)</p>
+    <p>Meals can only be edited and deleted before the slack message is sent (currently {{crontab_hour}} hours {{crontab_minute}} minutes {{crontab_timezone}})</p>
     <hr/>
     {%for meal in meals%}
         <h2>{{meal.name}}</h2>
