--- a/cornershop-backend-test/templates/navbar.html
+++ b/cornershop-backend-test/templates/navbar.html
@@ -12,7 +12,7 @@
         <li><a href="{%url 'create_meal' %}">Create Meal || </a></li>
         <li><a href="{%url 'read_meals' %}">My Created Meals || </a></li>
         <li><a href="{%url 'logout_user' %}">Check Orders || </a></li>
-        <li><a href="{%url 'logout_user' %}">Schedule Message(?) || </a></li>
+        <li><a href="{%url 'update_schedule' %}">Schedule Message(?) || </a></li>
         {%else%}
         <li><a href="{%url 'logout_user' %}">My Orders || </a></li>
         <li><a href="{%url 'logout_user' %}">My Current Order (shoping cart) || </a></li>
