--- a/cornershop-backend-test/meals/templates/meals/read_today.html
+++ b/cornershop-backend-test/meals/templates/meals/read_today.html
@@ -1,7 +1,7 @@
 {%extends 'main.html'%}
 {%block content%}
-    <h1>Today´s Meals</h1>
-    <!--<p>Meals can only be edited and deleted before the slack message is sent (currently {{crontab_hour}} hours {{crontab_minute}} minutes {{crontab_timezone}})</p>-->
+    <h1>Today´s Lunch</h1>
+    <p>Meals can only be ordered before 11am</p>
     <hr/>
     {%for meal in meals%}
         <h2>{{meal.name}}</h2>
